# Hydrograph_Versus_Seatek_Sensors_Project

./: # Contributing to Hydrograph-Versus-Seat.md  .flake8  .gitignore  .gitkeep  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  FETCH_HEAD  Hydrograph_Versus_Seatek_Sensors_Project_project_code.txt  ORIG_HEAD  PR_DESCRIPTION.md  Pipfile  README.md  benchmark_array_cache.py  benchmark_boolean.py  cleanup_final.py  cleanup_project.py  commit_message.txt  commit_msg.txt  config.yaml  data_validator.py  debug_test.py  fix_loader.py  fix_sentinel.py  fix_syntax.py  fix_syntax2.py  fix_syntax3.py  fix_tests2.py  format.py  handoff.md  import numpy as np.py  import pytest.py  index  logging_utils.py  main.py  organize_project.py  packed-refs  patch_all_ast.py  (+24 more)
.github/: .github_changelog_generator.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  repository-automation.yml
.jules/: bolt.md  lessons.md  palette.md  sentinel.md
.qodo/: indexes.sqlite
.run/: sensor-visualization.run.xml
.trunk/: .gitignore  actions  logs  notifications  notifications-state  out  server.pid  tools  trunk.yaml
.venv_new/: pyvenv.cfg
analysis/: import numpy as np.py
claude_db/: .dbxignore
config/: __init__.py  settings.yaml
data/: Data_Summary.xlsx  Hydrograph_Seatek_Data.xlsx
docs/: # Contributing to Hydrograph-Versus-Seat.md  # Contributing to Hydrograph_Versus_Seatek_Sensors_Project.md  # MIT License.md  .gitignore  .gitignore_backup  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYDROGRAPH_AND_SEATEK_SENSOR_ANALYSIS.ipynb  Hydrograph-Seatek Correlation Analysis Documentation.md  LICENSE.md  README.md  SECURITY.md  config.yaml  requirements.txt
info/: exclude
logs/: HEAD
other scripts/: from openpyxl import load_workbook.py  import pandas as pd.py
scripts/: __init__.py  correlation-explanation.py  correlation_explanation.py  data_loader.py  data_processor.py  from openpyxl import load_workbook.py  generate_commit_message.py  import logging.py  import numpy as np.py  import pandas as pd.py  import pytest.py  import_logging.py  main.py  updated_visualizer.py  visualization.py  visualizer.py
src/: .gitignore  Pipfile  __init__.py  config  config.yaml  description  main.py  packed-refs  pyvenv.cfg  requirements.txt  sensor-visualization.py  sensor_visualization_v2.py  setup.py  visualization.py
tasks/: lessons.md  todo.md
tests/: # test_data_processor.py  (+14 more)
(+116 files in other folders)
