[tool.poetry]
name = "hydrosensors"
version = "0.1.0"
description = "Compare Hydrograph and Seatek sensors"
authors = ["Abhi Mehrotra <abhimhrtr@pm.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.2.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
requests = "^2.31.0"
openpyxl = "^3.1.3"
lxml = "^5.3.0"
pillow = "^11.0.0"
typing-extensions = "^4.10.0"
colorlog = "^6.8.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"