[tool.poetry]
name = "hydrograph-seatek-analysis"
version = "1.0.0"
description = "Analysis of hydrograph and Seatek sensor data for river morphology studies"
authors = ["Abhi Mehrotra <abhimhrtr@pm.me>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
pandas = "^2.2.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scipy = "^1.12.0"
openpyxl = "^3.1.2"
colorlog = "^6.7.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seatek-processor = "src.hydrograph_seatek_analysis.app:main"
validate-data = "validate_data:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"